--- a/IngresoPedidos/IngresoPedidos.csproj
+++ b/IngresoPedidos/IngresoPedidos.csproj
@@ -82,7 +82,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="DataAccessLayer\DbContext.cs" />
+    <Compile Include="DataAccessLayer\DataBaseContext.cs" />
     <Compile Include="DataAccessLayer\Modelos.cs" />
     <Compile Include="DataAccessLayer\Pedidos.cs" />
     <Compile Include="DataAccessLayer\PedidosView.cs" />
