que tul la sarasa

--- a/IngresoPedidos/IngresoPedidos.csproj
+++ b/IngresoPedidos/IngresoPedidos.csproj
@@ -165,5 +165,8 @@
   <ItemGroup>
     <Resource Include="orderadd.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\NOT1422EXO.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
