--- a/IngresoPedidos/IngresoPedidos.csproj
+++ b/IngresoPedidos/IngresoPedidos.csproj
@@ -235,9 +235,6 @@
     <Resource Include="Resources\paste.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\128.ico" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Resources\128 %281%29.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -341,6 +338,21 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\SplashScreen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Check-48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Check-128.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Check-256.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\128.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\128 s%281%29.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
