--- a/IngresoPedidos/IngresoPedidos.csproj
+++ b/IngresoPedidos/IngresoPedidos.csproj
@@ -81,7 +81,7 @@
     <Compile Include="DatabaseContext\Views\PermisosView.cs" />
     <Compile Include="DatabaseContext\Tables\Productos.cs" />
     <Compile Include="DatabaseContext\Tables\Usuarios.cs" />
-    <Compile Include="Helpers\Busqueda.cs" />
+    <Compile Include="Helpers\Buscador.cs" />
     <Compile Include="Helpers\StaticData.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -106,7 +106,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Login.xaml">
+    <Page Include="LoginWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -134,8 +134,8 @@
     <Compile Include="MostrarImagen.xaml.cs">
       <DependentUpon>MostrarImagen.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Login.xaml.cs">
-      <DependentUpon>Login.xaml</DependentUpon>
+    <Compile Include="LoginWindow.xaml.cs">
+      <DependentUpon>LoginWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
